--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.2",
+    "benchmark": "^2.1.4",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-import-resolver-node": "^0.3.1",
@@ -51,7 +52,10 @@
     "eslint-plugin-react": "^7.1.0",
     "get-pixels": "^3.3.0",
     "jest": "^20.0.4",
+    "looks-same": "^3.2.1",
+    "pixelmatch": "^4.0.2",
     "pkgfiles": "^2.3.2",
+    "pngjs": "^3.2.0",
     "prettier": "^1.5.2",
     "rimraf": "^2.6.1"
   },
