--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:unit": "jest",
     "lint": "eslint . --cache && echo \"eslint: no lint errors\"",
     "test:watch": "yarn test:unit -- --watch",
-    "test:benchmark": "babel-node test/benchmark/graphicsmagick.js && babel-node test/benchmark/imagemagick1.js && babel-node test/benchmark/imagemagick2.js && babel-node test/benchmark/pixelmatch.js"
+    "test:benchmark": "babel-node test/benchmark/graphicsmagick.js && babel-node test/benchmark/imagemagick1.js && babel-node test/benchmark/imagemagick2.js && babel-node test/benchmark/pixelmatch.js && babel-node test/benchmark/image-diff.js"
   },
   "dependencies": {
     "chalk": "^2.0.1",
@@ -52,6 +52,7 @@
     "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.1.0",
     "get-pixels": "^3.3.0",
+    "image-diff": "^1.6.3",
     "jest": "^20.0.4",
     "looks-same": "^3.2.1",
     "pixelmatch": "^4.0.2",
