--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:unit": "jest",
     "lint": "eslint . --cache && echo \"eslint: no lint errors\"",
     "test:watch": "yarn test:unit -- --watch",
-    "test:benchmark": "babel-node test/benchmark/graphicsmagick.js && babel-node test/benchmark/imagemagick1.js && babel-node test/benchmark/imagemagick2.js && babel-node test/benchmark/pixelmatch.js && babel-node test/benchmark/image-diff.js"
+    "test:benchmark": "babel-node test/benchmark/image-diff.js && babel-node test/benchmark/imagemagick1.js && babel-node test/benchmark/imagemagick2.js && babel-node test/benchmark/graphicsmagick.js && babel-node test/benchmark/pixelmatch.js && babel-node test/benchmark/resemble.js && babel-node test/benchmark/looks-same.js"
   },
   "dependencies": {
     "chalk": "^2.0.1",
