--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node": ">= 6.0.0"
   },
   "scripts": {
+    "prebuild": "rm -rf lib/",
     "build": "NODE_ENV=production babel -d lib src",
     "prepublishOnly": "yarn build && pkgfiles",
     "prettier": "find . -name \"*.js\" | grep -v -f .eslintignore | xargs prettier --write --no-semi --single-quote --trailing-comma es5 --print-width 100",
